--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ nav a {
 main {
     max-width: 900px;
     margin: auto;
-    background: #0e0e0e;
+    background: #0e0e0edb;
     text-align: center;
     border: 1px solid #252525;
     outline: 20px solid #070707d6;
@@ -122,15 +122,15 @@ article {
     vertical-align: middle;
     padding: 5px 20px;
     border: 1px solid #3c3c3c;
-    border-radius: 8px;
+    border-radius: 2px;
     background: #727272;
-    background: -webkit-gradient(linear, left top, left bottom, from(#727272), to(#3c3c3c));
-    background: -moz-linear-gradient(top, #727272, #3c3c3c);
-    background: linear-gradient(to bottom, #727272, #3c3c3c);
-    font: normal normal bold 13px arial;
+    background: -webkit-gradient(linear, left top, left bottom, from(#202020), to(#080808));
+    background: -moz-linear-gradient(top, #202020, #080808);
+    background: linear-gradient(to bottom, #202020, #080808);
+    font: normal normal bold 12px arial;
     color: #ffffff;
     text-decoration: none;
-    text-transform: uppercase
+    text-transform: uppercase;
 }
 .button:hover {
     border: 1px solid #474747;
