--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ nav a {
 #cabecera {
     animation: neon 2s infinite alternate;
     font-family: NEON____;
-    font-size: 70px;
+    font-size: 64px;
     position: relative;
     top: 185px;
     margin: auto;
@@ -270,10 +270,29 @@ table {margin: 20px auto;}
     max-width: 740px;
     margin: 40px auto;
 }
-.campo {
+.profile .campo {
     display: flex;
     margin: 10px;
     justify-content: center;
+}
+
+.datos .campo {
+    margin: 10px;
+}
+.datos .campo2 {
+    display: flex;
+    flex-direction: column;
+    text-transform: uppercase;
+    font-size: 17px;
+    align-items: flex-start;
+    max-width: 162px;
+    margin: 10px auto;
+    color: #9f2c2c;
+}
+.gencamp {
+    margin: 3px 0px;
+    font-family: calibri;
+    letter-spacing: 1px;
 }
 .profile .campo label {
     min-width: 180px;
@@ -294,7 +313,7 @@ table {margin: 20px auto;}
 }
 input#nacimiento {
     color: #000000;
-    background: #999999;
+    background: #d9d9d9;
 }
 input.btninput {
     font-size: 13px;
@@ -309,4 +328,80 @@ input.btninput {
 input.btninput:hover {
     background: #c83900;
     color: #000;
+}
+#exp {
+    display: block;
+    margin: auto;
+    background: #000;
+    color: #ededed;
+}
+
+.mainart form h2 {
+    color: #db8b5c !important;
+    border-bottom: 1px solid #74492f !important;
+    text-transform: uppercase;
+    font-weight: 100;
+    font-family: 'Orbitron';
+    font-size: 15px;
+    max-width: 830px;
+    margin: 30px auto;
+    padding-bottom: 10px;
+}
+
+.titleform {
+    min-width: 180px;
+    text-align: left;
+    padding: 5px;
+    text-transform: uppercase;
+    font-family: calibri;
+    font-size: 13px;
+    letter-spacing: 1px;
+    border-bottom: 1px solid #4a4a4a;
+    display: block;
+    margin-bottom: 10px;
+}
+
+select#horoscopo {
+    width: 200px;
+    background: #000;
+    color: #dbdbdb;
+    padding: 5px;
+    font-size: 13px;
+    text-transform: uppercase;
+    font-family: calibri;
+}
+fieldset {
+    border-color: #000000;
+    font-size: 13px;
+    text-transform: uppercase;
+    font-family: 'Orbitron';
+    background: #0000007d;
+    color: #fff;
+}
+button {
+    cursor: pointer;
+    text-align: center;
+    vertical-align: middle;
+    padding: 5px 20px;
+    border: 1px solid #3c3c3c;
+    border-radius: 2px;
+    background: #727272;
+    background: -webkit-gradient(linear, left top, left bottom, from(#202020), to(#080808));
+    background: -moz-linear-gradient(top, #202020, #080808);
+    background: linear-gradient(to bottom, #202020, #080808);
+    font: normal normal bold 12px arial;
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+button:hover {
+    border: 1px solid #474747;
+    background: #ff0000;
+    background: -webkit-gradient(linear, left top, left bottom, from(#e60000), to(#680000));
+    background: -moz-linear-gradient(top, #e60000, #680000);
+    background: linear-gradient(to bottom, #e60000, #680000);
+    color: #ffffff;
+    text-decoration: none;
+    text-transform: uppercase
 }
